@@ -19,6 +19,7 @@ in a shaft or an elevator
 -added basic glass elevators to the Glass Tower
 -simultaneous door movements are now supported
 -call button monitor added, to realistically wait for an available elevator during a call
+-call button light status can now be changed by shift-clicking the button
 
 Version 1.4.1 (2.0 Alpha 4.1)
 -------------------------
